<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".complaintreg"
    tools:showIn="@layout/app_bar_complaint">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="27dp"
        android:layout_marginStart="116dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="116dp"

        android:layout_marginBottom="12dp"
        android:text="@string/Sel"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <RadioButton
            android:id="@+id/carpenter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/car" />

        <RadioButton
            android:id="@+id/plumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/plu" />

        <RadioButton
            android:id="@+id/electrician"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ele" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Other" />
    </RadioGroup>

    <EditText
        android:id="@+id/complaintdescription"
        android:layout_width="match_parent"
        android:layout_height="88dp"
        android:layout_marginTop="23dp"
        android:background="#c1c4eceb"
        android:ems="10"
        android:textAlignment="center"
        android:hint="@string/Desc"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginStart="116dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="116dp"

        android:text="@string/ava"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/complaintdescription" />

    <TextView
        android:id="@+id/starttime"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="95dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="94dp"
        android:background="#c1c4eceb"
        android:ems="10"
        android:hint="From"
        android:inputType="time"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/endtime"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="95dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="94dp"
        android:background="#c1c4eceb"
        android:ems="10"
        android:hint="To"
        android:inputType="time"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/starttime" />

    <Button
        android:id="@+id/buttoncom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="147dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="149dp"
        android:background="@color/colorPrimary"
        android:text="Submit"
        android:textColor="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.518"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/endtime" />

</android.support.constraint.ConstraintLayout>
